--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "org.sonarqube" version "2.6"
+}
+
 apply plugin: 'java'
 
 def specificationVersion = '0.0.1'
@@ -24,8 +28,8 @@ jar {
     }
 }
 
-apply from: './signing.gradle'
-build.dependsOn('signJar')
+//apply from: './signing.gradle'
+//build.dependsOn('signJar')
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
