--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
 apply plugin: 'java'
 
+apply plugin: 'jacoco'
+
 def specificationVersion = '0.0.1'
 group 'ru.badpit'
 version(specificationVersion + '-SNAPSHOT')
@@ -30,6 +32,7 @@ jar {
 
 //apply from: './signing.gradle'
 //build.dependsOn('signJar')
+project.tasks["sonarqube"].dependsOn "test"
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
